// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefaultImage /> should render correctly 1`] = `
<DefaultImage__Container
  height="100%"
  width="100%"
>
  <Image
    alt=""
    src=""
  />
</DefaultImage__Container>
`;

exports[`<DefaultImage /> should render correctly with other size 1`] = `
<DefaultImage__Container
  height="400px"
  width="600px"
>
  <Image
    alt=""
    src=""
  />
</DefaultImage__Container>
`;
